--- a/admipro/src/app/components/incrementador/incrementador.component.html
+++ b/admipro/src/app/components/incrementador/incrementador.component.html
@@ -5,7 +5,7 @@
     <span class="input-group-btn">
         <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(-5)"><i class="mdi mdi-minus"></i></button>
     </span>
-    <input type="number" class="form-control" name="progreso" [(ngModel)]="progreso" (ngModelChange)="onChanges ( $evento )" min="0" max="100">
+    <input #txtProgress type="number" class="form-control" name="progreso" [(ngModel)]="progreso" (ngModelChange)="onChanges($event)" max="100" min="0">
     <span class="input-group-btn">
         <button class="btn btn-outline-primary" type="button" (click)="cambiarValor(+5)"><i class="mdi mdi-plus"></i></button>
     </span>
