--- a/admipro/src/app/pages/grafica1/grafica1.component.html
+++ b/admipro/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,36 @@
-<p>grafica1 works!</p>
+<div class="row">
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-grafico-dona [chartLabels]="graficos.grafico1.labels " [chartData]="graficos.grafico1.data " chartType="doughnut "></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+                <app-grafico-dona [chartLabels]="graficos.grafico2.labels " [chartData]="graficos.grafico2.data " chartType="doughnut "></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div class="row ">
+
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+                <app-grafico-dona [chartLabels]="graficos.grafico3.labels " [chartData]="graficos.grafico3.data " chartType="doughnut "></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+                <app-grafico-dona [chartLabels]="graficos.grafico4.labels " [chartData]="graficos.grafico4.data " chartType="doughnut "></app-grafico-dona>
+            </div>
+        </div>
+    </div>
+
+</div>
