--- a/admipro/src/app/pages/progress/progress.component.html
+++ b/admipro/src/app/pages/progress/progress.component.html
@@ -26,7 +26,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <!-- <app-incrementador (actualizaValor)="progreso2=$event" nombre="Progress Verde" [progreso]="progreso2"></app-incrementador> -->
+                <app-incrementador (actualizaValor)="progreso2=$event" nombre="Progress Verde" [progreso]="progreso2"></app-incrementador>
             </div>
         </div>
     </div>
