--- a/admipro/src/app/components/grafico-dona/grafico-dona.component.html
+++ b/admipro/src/app/components/grafico-dona/grafico-dona.component.html
@@ -1,8 +1,8 @@
 <div>
     <div>
         <div style="display: block">
-            <canvas baseChart [data]="chartData" [labels]="chartLabels" [chartType]="chartType">
-            </canvas>
+            <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
+        </canvas>
         </div>
     </div>
 </div>
